# whisper_speech_to_srt

./: .envrc  .gitignore  LANGUAGES.md  README.md  USAGE_STT_MPS.md  cli.md  convert_audio_to_mp3.md  convert_audio_to_mp3.py  covert_m4a.py  md_rename_by_llm.py  md_summarise_by_llm.py  pyproject.toml  requirements.txt  setup.py  split_audio_channels.py  srt_rename_by_llm.py  srt_summarise_by_llm.py  srt_to_lrc.py  srt_to_text.py  srt_to_txt.py  stt_mps.py  whisper_api.py  whisper_speech_to_srt.py
